# punch-punchbox-app

./: .coveragerc  .gitignore  Makefile  README.md  mypy.ini  poetry.toml  punchbox.py  pyproject.toml  tox.ini
conf/deployment_templates/: deployment.settings.j2
conf/profiles/standalone/: settings.yml  topology.yml
conf/profiles/test/: settings.yml
conf/reference_deployments/standalone/: settings.yml  topology.yml
conf/reference_deployments/test/: topology.yml
conf/samples/: punchbox.yml
conf/vagrant/: Vagrantfile.j2
deploy/: deploy_commands.py
generate/: __init__.py  generate.py  generate_commands.py
punchbox/: components.py  punchbox.py  punchbox_cli.py  services.py
punchbox/common_lib/command_meta/: command_option.py  commands.py
punchbox/common_lib/data_classes/: punchbox_configuration.py  source_hierarchy.py  workspace_configuration.py  workspace_hierarchy.py
punchbox/common_lib/runtime_meta/: environment.py  key.py  state_code.py
punchbox/deploy/: deploy.py
punchbox/generate/: generate.py  generate_helper.py
punchbox/punch_entry_point/: cli_configuration.py  punchbox.py  punchbox_cli.py
punchbox/utils/: ansible.py  ansible_templating_utils.py  assertion.py  file.py  punch_file_utils.py  punch_utils.py  state_utils.py
punchbox/workspace/: workspace.py  workspace_helper.py
tests/common_lib/: test_environment.py
tests/utils/: test_assertion.py  test_file.py  test_punch_file_utils.py
utils/: ansible_templating_utils.py  components.py
workspace/: workspace_commands.py
