[tool.poetry]
name = "punch-punchbox-app"
version = "0.1.0"
description = "the punchbox tool to deploy your punch"
authors = ["Dimitri Tombroff <dimitri@punchplatform.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.6"
click = "7.1.2"
click-help-colors = "0.9"
Jinja2 = "2.11.2"
MarkupSafe = "1.1.1"
PyYAML = "5.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
