[tool.poetry]
name = "punchbox"
version = "0.1.0"
description = "Punchbox a simple yet uselfull application for deploying a PunchPlatform"
authors = ["Punch <contact@punchplatform.com>"]
maintainers = ["Punch <contact@punchplatform.com>"]
homepage = "https://punchplatform.com"
repository = "https://github.com/punchplatform"
documentation = "https://doc.punchplatform.com"
include = ["LICENSE","README.md","DESCRIPTION", "resources/*"]

[tool.poetry.dependencies]
python = "3.6.8"
Click = "7.0"
Jinja2 = "2.11.1"
PyYAML = "5.3.1"
MarkupSafe = "1.1.1"
urllib3 = "1.25.8"
certifi = "2019.11.28"
chardet = "3.0.4"
idna = "2.9"
click-help-colors = "0.6"
halo = "0.0.28"

[tool.poetry.dev-dependencies]
mypy = "0.761"
flake8 = "3.7.9"
black = "19.10b0"
pex = "2.1.4"
requests = "2.23.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
punchbox = "punchbox.punchbox:main"
