[tool.poetry]
name = "punchbox"
version = "0.1.0"
description = "Punchbox a simple yet uselfull application for deploying a PunchPlatform"
authors = ["Punch <contact@punchplatform.com>"]
maintainers = ["Punch <contact@punchplatform.com>"]
homepage = "https://punchplatform.com"
repository = "https://github.com/punchplatform"
documentation = "https://doc.punchplatform.com"
include = ["LICENSE","README.md","DESCRIPTION", "resources/*"]

[tool.poetry.dependencies]
python = "3.6.8"
Click = "7.0"
Jinja2 = "2.11.1"
PyYAML = "5.3.1"
MarkupSafe = "1.1.1"
urllib3 = "1.25.8"
certifi = "2019.11.28"
chardet = "3.0.4"
idna = "2.9"
click-help-colors = "0.6"
halo = "0.0.28"
typing-extensions = "^3.7.4"
dataclasses = "^0.8"
rich = "^9.6.0"

[tool.poetry.dev-dependencies]
mypy = "0.761"
flake8 = "3.7.9"
black = "19.10b0"
pex = "2.1.4"
requests = "2.23.0"
pytest = "^6.2.1"
isort = "^5.7.0"
coverage = "^5.3.1"
pytest-cov = "^2.10.1"
tox = "^3.20.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
punchbox = "punchbox.punchbox:main"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra --rootdir=./ -s -v"
testpaths = [
    "tests",
]

[tool.isort]
profile = "black"
force_single_line = true
atomic = true
include_trailing_comma = true
lines_after_imports = 2
lines_between_types = 1
use_parentheses = true
src_paths = ["punchbox", "tests"]
skip_glob = ["*/setup.py"]
filter_files = true
known_first_party = "punchbox"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | tests/.*/setup.py
)/
'''

